[metadata]
name = maptools
version = 0.1.1
description = Tools to work with EMDB MAP files
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/paulkorir/maptools
license = Apache 2.0
classifiers =
    Development Status :: 1 - Planning
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development :: Libraries :: Python Modules

[options]
include_package_data = true
python_requires = >=3.6
setup_requires =
    setuptools
install_requires =
    numpy
    styled
packages = find:

[options.entry_points]
console_scripts =
    map = maptools.main:main
